fix(pomodoro): update neumorphic class and scrollbar styles

--- a/apps/pomodoro/src/styles.scss
+++ b/apps/pomodoro/src/styles.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 
 :root {
-  --bg: hsl(170, 100%, 85%);
+  --bg: hsla(170, 100%, 85%, 0.75);
+  --font-mono: 'JetBrains Mono', 'Courier New', Courier, monospace;
 }
 
 html {
@@ -19,7 +20,38 @@ body {
   font-family: inherit;
   line-height: inherit;
   margin: 0;
-  font-family: 'JetBrains Mono', 'Courier New', Courier, monospace;
+  font-family: var(--font-mono);
+}
+
+
+* {
+  // --sb-track-color: #232E33;
+  --sb-track-color: transparent;
+  --sb-thumb-color: #6BAF8D;
+  --sb-size: 8px;
+}
+
+*::-webkit-scrollbar {
+  display: none;
+  width: var(--sb-size);
+  right: 4px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 16px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 16px;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  * {
+    scrollbar-color: var(--sb-thumb-color)
+                     var(--sb-track-color);
+  }
 }
 
 h1,
@@ -58,6 +90,7 @@ pre {
   font-size: 16px;
 
   --bg-color: var(--bg);
+  --bd-color: transparent;
   --bg-angle: -45deg;
   --bg-start: rgba(0, 0, 0, 0.15);
   --bg-end: rgba(255, 255, 255, 0.3);
@@ -70,12 +103,24 @@ pre {
   --light-s: 0.75em;
   --light-c: rgba(255, 255, 255, 0.75);
 
-  border-radius: 3em;
+  border: 1px inset var(--bd-color);
+  border-radius: 3rem;
+  transition: background box-shadow font-size transform 150ms ease-in-out;
+  backdrop-filter: blur(6px);
+
   background: var(--bg-color);
   box-shadow:
     var(--shade-x) var(--shade-y) var(--shade-s) 0 var(--shade-c),
     var(--light-x) var(--light-y) var(--light-s) 0 var(--light-c);
-  transition: background box-shadow font-size transform 150ms ease-in-out;
+
+  &.inside {
+    --bg-color: hsla(0, 0%, 10%, 0.05);
+    --bd-color: hsla(0, 0%, 95%, 0.5);
+
+    box-shadow:
+      inset calc(var(--shade-x)/2) calc(var(--shade-y)/2) calc(var(--shade-s)/2) 0 var(--shade-c),
+      inset calc(var(--light-x)/2) calc(var(--light-y)/2) calc(var(--light-s)/2) 0 var(--light-c);
+  }
 
   &:not(.flat) {
     background:
